[gd_scene load_steps=6 format=3 uid="uid://dm5k8xqr2w7a3"]

[ext_resource type="Script" uid="uid://bnpqofofsbqgm" path="res://scenes/world/world.gd" id="1_world"]
[ext_resource type="PackedScene" uid="uid://cxl8v7qh3k6dm" path="res://scenes/environment/parallax_background.tscn" id="2_parallax"]
[ext_resource type="PackedScene" uid="uid://dp8k3nxq2w7fm" path="res://scenes/player/player_ship.tscn" id="3_player"]
[ext_resource type="PackedScene" uid="uid://bk7r3m5v2wxqp" path="res://scenes/player/player_camera.tscn" id="4_camera"]
[ext_resource type="PackedScene" uid="uid://cspawner12345" path="res://scenes/entities/asteroids/asteroid_spawner.tscn" id="5_spawner"]

[node name="World" type="Node2D"]
script = ExtResource("1_world")

[node name="ParallaxBackground" parent="." instance=ExtResource("2_parallax")]

[node name="Entities" type="Node2D" parent="."]

[node name="Player" parent="Entities" instance=ExtResource("3_player")]

[node name="PlayerCamera" parent="." instance=ExtResource("4_camera")]

[node name="AsteroidSpawner" parent="." instance=ExtResource("5_spawner")]

[node name="Portals" type="Node2D" parent="."]

[node name="Environment" type="Node2D" parent="."]
